--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Home &mdash; Pallab Photography </title>
+  <title>Fashion &mdash; Pallab Photography </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -55,7 +55,7 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
                 <li class="has-children active">
-                  <a href="#">Gallery</a>
+                  <a href="Gallery.html">Gallery</a>
                   <ul class="dropdown">
                     <li><a href="Fashion.html">Fashion</a></li>
                     <li><a href="Food.html">Food</a></li>
@@ -239,10 +239,10 @@
           <div class="col-12 col-md-4 text-center text-md-left mb-2 mb-md-0">
             <span class="footer-section-title">Socials</span>
             <span class="footer-social-icons ml-2">
-              <a href="https://www.facebook.com/pallabphotography" target="_blank" rel="noopener" aria-label="Facebook"><span class="icon-facebook"></span></a>
-              <a href="https://www.pinterest.com/#" target="_blank" rel="noopener" aria-label="Pinterest"><span class="icon-pinterest"></span></a>
-              <a href="https://www.behance.net/#" target="_blank" rel="noopener" aria-label="Behance"><span class="icon-behance"></span></a>
-              <a href="https://www.instagram.com/pallabphotography_" target="_blank" rel="noopener" aria-label="Instagram"><span class="icon-instagram"></span></a>
+              <a href="https://www.facebook.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Facebook"><span class="icon-facebook"></span></a>
+              <a href="https://www.pinterest.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Pinterest"><span class="icon-pinterest"></span></a>
+              <a href="https://www.behance.net/thevedicwedding" target="_blank" rel="noopener" aria-label="Behance"><span class="icon-behance"></span></a>
+              <a href="https://www.instagram.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Instagram"><span class="icon-instagram"></span></a>
            
             </span>
           </div>
@@ -250,7 +250,7 @@
             <span class="footer-section-title">Sitemap</span>
             <span class="footer-links ml-2">
               <a href="index.html">Home</a> |
-              <a href="#">Gallery</a> |
+              <a href="Gallery.html">Gallery</a> |
          
               <a href="about.html">About</a> |
               <a href="contact.html">Contact</a>
@@ -271,6 +271,63 @@
 
 
   <style>
+    /* Strip 1: Fullscreen Slideshow Styles */
+    .strip-1 {
+      width: 100vw;
+      max-width: 1920px;
+      height: 800px;
+      margin: 0 auto;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      overflow: hidden;
+      background: #000;
+    }
+    .strip-1-inner {
+      width: 100vw;
+      max-width: 1920px;
+      height: 800px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      overflow: hidden;
+    }
+    .strip-1-slideshow {
+      width: 100vw;
+      max-width: 1920px;
+      height: 800px;
+      margin: 0 auto;
+      position: relative;
+    }
+    .strip-1-slide img {
+      width: 100vw;
+      max-width: 1920px;
+      height: 800px;
+      object-fit: cover;
+      display: block;
+      margin: 0 auto;
+    }
+    @media (max-width: 991.98px) {
+      .strip-1,
+      .strip-1-inner,
+      .strip-1-slideshow {
+        width: 100vw;
+        max-width: 100vw;
+        height: 320px;
+        min-height: 180px;
+      }
+      .strip-1-slide img {
+        width: 100vw;
+        max-width: 100vw;
+        height: 320px;
+        min-height: 180px;
+        object-fit: cover;
+      }
+    }
     /* Strip 2: Split Text & Image Section Styles */
     .strip-2 {
       width: 100vw;
