--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
       justify-content: center;
       position: relative;
       overflow: hidden;
-      margin-top: var(--navbar-height, 80px);
+      margin-top: 0 !important;
       background: none;
     }
     .strip-1-inner {
@@ -311,15 +311,15 @@
       .strip-1-inner,
       .strip-1-slideshow {
         width: 100vw;
-        height: 320px;
-        min-height: 180px;
-        margin-top: var(--navbar-height, 60px);
+        height: 220px;
+        min-height: 140px;
+        margin-top: 0 !important;
       }
       .strip-1-slide img {
         width: 100vw;
-        height: 320px;
-        min-height: 180px;
-        object-fit: cover;
+        height: 220px;
+        min-height: 140px;
+        object-fit: contain;
         background: #000;
       }
     }
