--- a/index.html
+++ b/index.html
@@ -823,11 +823,19 @@
       z-index: 1030;
     }
     body {
-      padding-top: 80px !important;
+      padding-top: 0 !important;
+      margin: 0;
+    }
+    .site-wrap {
+      margin: 0 !important;
+      padding: 0 !important;
+    }
+    .strip-1 {
+      margin-top: 0 !important;
     }
     @media (max-width: 991.98px) {
       body {
-        padding-top: 60px !important;
+        padding-top: 0 !important;
       }
     }
   </style>
