--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     .strip-1-slide img {
       width: 100vw;
       height: 800px;
-      object-fit: cover;
+      object-fit: contain;
       display: block;
       margin: 0 auto;
       background: #000;
