--- a/index.html
+++ b/index.html
@@ -277,12 +277,13 @@
       height: 800px;
       padding: 0;
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: center;
       position: relative;
       overflow: hidden;
       margin-top: 0 !important;
       background: none;
+      border: none;
     }
     .strip-1-inner {
       width: 100vw;
@@ -301,10 +302,11 @@
     .strip-1-slide img {
       width: 100vw;
       height: 800px;
-      object-fit: contain;
+      object-fit: scale-down;
       display: block;
       margin: 0 auto;
       background: #000;
+      vertical-align: top;
     }
     @media (max-width: 991.98px) {
       .strip-1,
@@ -321,6 +323,7 @@
         min-height: 140px;
         object-fit: contain;
         background: #000;
+        vertical-align: top;
       }
     }
     /* Strip 2: Split Text & Image Section Styles */
@@ -824,11 +827,14 @@
     }
     body {
       padding-top: 0 !important;
-      margin: 0;
+      margin: 0 !important;
+      border: none !important;
+      background: #fff !important;
     }
     .site-wrap {
       margin: 0 !important;
       padding: 0 !important;
+      border: none !important;
     }
     .strip-1 {
       margin-top: 0 !important;
