--- a/index.html
+++ b/index.html
@@ -322,8 +322,10 @@
         height: 220px;
         min-height: 140px;
         object-fit: contain;
-        background: #000;
+        background: none !important;
         vertical-align: top;
+        margin-bottom: 0 !important;
+        border: none !important;
       }
     }
     /* Strip 2: Split Text & Image Section Styles */
