--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     .strip-1-slide img {
       width: 100vw;
       height: 800px;
-      object-fit: scale-down;
+      object-fit: none;
       display: block;
       margin: 0 auto;
       background: #000;
