--- a/index.html
+++ b/index.html
@@ -841,11 +841,7 @@
     .strip-1 {
       margin-top: 0 !important;
     }
-    @media (max-width: 991.98px) {
-      body {
-        padding-top: 0 !important;
-      }
-    }
+    /* Removed mobile override for body padding-top so navbar offset works on mobile */
   </style>
   <script>
     // Always solid navbar, no transparency
