--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
   <link rel="stylesheet" href="css/aos.css">
 
+
   <link rel="stylesheet" href="css/style.css">
+  <!-- Mobile & iPad slider/nav fixes -->
+  <link rel="stylesheet" href="css/mobile-slider-fix.css">
 
 </head>
 <body class="single">
