--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="strip-1-slideshow owl-carousel">
           <div class="strip-1-slide"><img src="images/1.jpg" alt="Gallery Image 1"></div>
           <div class="strip-1-slide"><img src="images/2.jpg" alt="Gallery Image 2"></div>
-          <div class="strip-1-slide"><img src="images/img_3.jpg" alt="Gallery Image 3"></div>
+          <div class="strip-1-slide"><img src="images/3.jpg" alt="Gallery Image 3"></div>
           <div class="strip-1-slide"><img src="images/img_4.jpg" alt="Gallery Image 4"></div>
           <div class="strip-1-slide"><img src="images/img_5.jpg" alt="Gallery Image 5"></div>
         </div>
