--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
 
 
     <!-- Strip 1: Fullscreen Slideshow -->
-    <section class="strip-1">
-      <div class="strip-1-inner">
-        <div class="strip-1-slideshow owl-carousel">
+    <section class="strip-1" style="margin-top:0 !important; padding-top:0 !important;">
+      <div class="strip-1-inner" style="margin-top:0 !important; padding-top:0 !important;">
+        <div class="strip-1-slideshow owl-carousel" style="margin-top:0 !important; padding-top:0 !important;">
           <div class="strip-1-slide"><img src="images/1.jpg" alt="Gallery Image 1"></div>
           <div class="strip-1-slide"><img src="images/2.jpg" alt="Gallery Image 2"></div>
-          <div class="strip-1-slide"><img src="images/1.jpg" alt="Gallery Image 3"></div>
-          <div class="strip-1-slide"><img src="images/2.jpg" alt="Gallery Image 4"></div>
-          <div class="strip-1-slide"><img src="images/1.jpg" alt="Gallery Image 5"></div>
+          <div class="strip-1-slide"><img src="images/img_3.jpg" alt="Gallery Image 3"></div>
+          <div class="strip-1-slide"><img src="images/img_4.jpg" alt="Gallery Image 4"></div>
+          <div class="strip-1-slide"><img src="images/img_5.jpg" alt="Gallery Image 5"></div>
         </div>
       </div>
     </section>
@@ -1841,7 +1841,6 @@
           loop: true,
           autoplay: true,
           autoplayTimeout: 3000,
-         
           autoplayHoverPause: true,
           nav: false,
           dots: true,
